compiler/tools/fpp-check/test/event/zero_throttle_count.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/event/zero_throttle_count.fpp:3.3
  event E severity activity low \
  ^
error: event throttle count must be greater than zero
